--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Morehead-Cain Day of Giving November 21, 2016</title>
+	<link rel="shortcut icon" href="http://www.moreheadcain.org/assets/themes/moreheadcain/imgs/favicon.ico">
     <!-- Bootstrap -->
 	<link href="css/bootstrap.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/day-of-giving.css">
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
